--- a/SDK/Aow.Core/Aow.Core.csproj
+++ b/SDK/Aow.Core/Aow.Core.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="DotNetZip" Version="1.9.2-rc1" />
+    <PackageReference Include="System.ValueTuple" Version="4.5.0" />
   </ItemGroup>
 
   <ItemGroup>
